--- a/Styles.css
+++ b/Styles.css
@@ -1,106 +1,115 @@
-body{
-    margin:0;
-    padding:0;
+html {
+  font-size: calc(100vw / 80);
+}
+body {
+  margin: 0;
+  padding: 0;
 }
 .header {
-    background-color: black;
-    color: white;
-    padding:0;
-    margin:0;
-    
-    display:grid;
-    grid-template-columns: 1fr 2fr 2fr;
-    grid-template-rows: auto;
-    justify-content:space-between;
-    align-items:center;  
+  background-color: --primary;
+  color: --secondary;
+  padding: 0;
+  margin: 0;
+
+  display: grid;
+  grid-template-columns: 2fr 4fr 3fr;
+  grid-template-rows: auto auto;
+  justify-content: space-between;
+  align-items: center;
 }
-.header>*{
-    border: 1px solid red;
-    align-items: center;
-    justify-content:center;
+.header > * {
+  border: 1px solid red;
+  align-items: center;
+  justify-content: center;
 }
 #headerName {
-    grid-column:2;
-    grid-row: 1;
-    font-family:fantasy;
-    font-size: 2rem;
-    display:flex;
-    justify-content: center;
+  grid-area: 1/2/2/3;
+  font-family: Georgia, "Times New Roman", Times, serif;
+  font-size: 2.5rem;
+  font-weight: 600;
+  display: flex;
+  justify-content: center;
 }
 #headerInfo {
-    grid-column:2;
-    grid-row: 2;
-    display: flex;
-    flex-direction: column;
+  grid-area: 2/2/3/3;
+  display: flex;
+  font-size: 1.5rem;
 }
-
+.buttonSocial {
+  width: 4rem;
+}
 #socials_Lang {
-    grid-row: 1/span 2;
-    grid-column: 3;
+  grid-area: 1 / 3 / 3 / 4;
 }
 #language {
-    display:flex;
-    justify-content: center;
+  display: flex;
+  justify-content: center;
 }
-#socials{
-    display:flex;
-    justify-content: center;
+#socials {
+  display: flex;
+  justify-content: center;
 }
 #mainLogo {
-    background-color:white;
-    grid-row:1/span 2;
-    grid-column:1;
+  background-color: white;
+  grid-row: 1 / span 2;
+  grid-column: 1;
 }
 img {
-    max-width:100%;
-}
-.hidden {
-    display: none;
+  max-width: 100%;
+  height: auto;
 }
 
-@media (width<=600px){
-    .header {
-        display:grid;
-        grid-template-columns: 2fr 5fr;
-        grid-template-rows: auto auto;
-        
-    }
-    #mainLogo {
-        grid-column:1;
-        grid-row:2
-    }
-    #headerInfo {
-        grid-column:2;
-        grid-row: 2;
-    }
-    #headerName{
-        grid-column:1/ span 2;
-        grid-row: 1
-    }
-    #socials_Lang {
-        grid-column:1 / span 2;
-        grid-row:3;
-    }
+.hidden {
+  display: none;
+}
+@media (min-width: 1281px) {
+  html {
+    font-size: calc(100vw / 80);
+    background-color: blue;
+  }
+}
+@media (max-width: 780px) {
+  .header {
+    display: grid;
+    grid-template-columns: 2fr 5fr;
+    grid-template-rows: auto auto;
+  }
+  #mainLogo {
+    grid-column: 1;
+    grid-row: 2;
+  }
+  #headerInfo {
+    grid-column: 2;
+    grid-row: 2;
+  }
+  #headerName {
+    grid-column: 1 / span 2;
+    grid-row: 1;
+  }
+  #socials_Lang {
+    grid-column: 1 / span 2;
+    grid-row: 3;
+  }
 }
 #bookRoomContainer {
-    background-color: blue;
-    color: white;
-    margin: 10px 25%;
-    padding: 10px;
-    border-radius: 20px;
-    display:flex;
-    justify-content:center;
-    align-items: center;
+  background-color: blue;
+  color: white;
+  margin: 10px 25%;
+  padding: 10px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
-#navMenuContainer{
-    display: flex;
-    margin: 1rem 10%;
+#navMenuContainer {
+  display: flex;
+  margin: 1rem 10%;
 }
 .navMenu {
-    justify-content:center;
-    align-items: center;
-    flex:1;
-    border: solid blue;
-    display:flex;
-    padding: 1rem 1rem;
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  border: solid blue;
+  display: flex;
+  padding: 1rem 1rem;
 }
