--- a/Styles.css
+++ b/Styles.css
@@ -1,5 +1,5 @@
 html {
-  font-size: calc(100vw / 80);
+  font-size: 16px;
 }
 body {
   margin: 0;
@@ -8,12 +8,13 @@ body {
 .header {
   background-color: --primary;
   color: --secondary;
-  padding: 0;
+  padding: 0 3%;
   margin: 0;
 
   display: grid;
-  grid-template-columns: 2fr 4fr 3fr;
-  grid-template-rows: auto auto;
+  grid-template-columns: minmax(210px, 2fr) minmax(530px, 6fr) minmax(300px, 4fr);
+  grid-template-rows: auto auto auto;
+  grid-auto-flow: dense;
   justify-content: space-between;
   align-items: center;
 }
@@ -21,6 +22,10 @@ body {
   border: 1px solid red;
   align-items: center;
   justify-content: center;
+}
+#mainLogo {
+  background-color: white;
+  grid-area: 1/1/3/2;
 }
 #headerName {
   grid-area: 1/2/2/3;
@@ -33,13 +38,24 @@ body {
 #headerInfo {
   grid-area: 2/2/3/3;
   display: flex;
-  font-size: 1.5rem;
+  font-size: 1.2rem;
 }
-.buttonSocial {
-  width: 4rem;
+a {
+  color: inherit;
+  text-decoration: inherit;
 }
 #socials_Lang {
   grid-area: 1 / 3 / 3 / 4;
+}
+.buttonSocial {
+  width: 3rem;
+}
+.divider {
+  height: 1.5rem;
+}
+.buttonLang {
+  width: 3rem;
+  font-size: 1rem;
 }
 #language {
   display: flex;
@@ -49,30 +65,42 @@ body {
   display: flex;
   justify-content: center;
 }
-#mainLogo {
-  background-color: white;
-  grid-row: 1 / span 2;
-  grid-column: 1;
+.colorless {
+  filter: grayscale(90%);
 }
 img {
   max-width: 100%;
   height: auto;
 }
+.buttonSocial {
+  filter: grayscale(100%);
+}
+.clicked {
+  filter: grayscale(0%);
+}
+button:hover,
+button:active,
+.buttonSocial:focus {
+  filter: grayscale(0%);
+}
 
 .hidden {
   display: none;
 }
-@media (min-width: 1281px) {
+@media (min-width: 1921px) {
   html {
-    font-size: calc(100vw / 80);
+    font-size: calc(100vw / 120);
     background-color: blue;
   }
 }
-@media (max-width: 780px) {
+@media (orientation: portrait) or (max-width: 1024px) {
+  html {
+    font-size: max (calc(100vw / 45), 10px);
+  }
   .header {
     display: grid;
-    grid-template-columns: 2fr 5fr;
-    grid-template-rows: auto auto;
+    grid-template-columns: minmax(110px, 1fr) 5fr;
+    grid-template-rows: auto auto auto;
   }
   #mainLogo {
     grid-column: 1;
@@ -87,29 +115,43 @@ img {
     grid-row: 1;
   }
   #socials_Lang {
-    grid-column: 1 / span 2;
-    grid-row: 3;
+    grid-area: 3 / 1 / 4 / 3;
+    display: flex;
+    flex-direction: row-reverse;
+    justify-content: space-between;
   }
 }
 #bookRoomContainer {
-  background-color: blue;
-  color: white;
   margin: 10px 25%;
   padding: 10px;
   border-radius: 20px;
   display: flex;
   justify-content: center;
   align-items: center;
+  font-size: 1.5rem;
 }
 #navMenuContainer {
   display: flex;
   margin: 1rem 10%;
+  border-radius: 30%;
 }
 .navMenu {
   justify-content: center;
   align-items: center;
   flex: 1;
-  border: solid blue;
+  font-weight: bold;
+  font-size: 1.5rem;
   display: flex;
   padding: 1rem 1rem;
+  margin-bottom: 0;
+}
+article {
+  margin: 0 10%;
+}
+.articleTitle {
+  text-align: center;
+  font-size: 1.5rem;
+}
+.articleText {
+  text-indent: 2rem;
 }
