--- a/Styles.css
+++ b/Styles.css
@@ -12,13 +12,14 @@ body {
   margin: 0;
 
   display: grid;
-  grid-template-columns: minmax(210px, 2fr) minmax(530px, 6fr) minmax(300px, 4fr);
+  grid-template-columns: minmax(210px, 2fr) 6fr minmax(300px, 4fr);
   grid-template-rows: auto auto auto;
   grid-auto-flow: dense;
   justify-content: space-between;
   align-items: center;
 }
 .header > * {
+  border: 1px solid blue;
   align-items: center;
   justify-content: center;
 }
@@ -33,11 +34,16 @@ body {
   font-weight: 600;
   display: flex;
   justify-content: center;
+  text-align: center;
+  margin-bottom: 1rem;
 }
 #headerInfo {
   grid-area: 2/2/3/3;
   display: flex;
   font-size: 1.2rem;
+}
+span.avoidWrap {
+  display: inline-block;
 }
 a {
   color: inherit;
@@ -92,24 +98,128 @@ button:active,
 .buttonSocial:focus {
   filter: grayscale(0%);
 }
+#bookRoomContainer {
+  margin: 10px 25%;
+  padding: 10px;
+  border-radius: 20px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-size: 1.5rem;
+  font-weight: bold;
+  border: 2px solid;
+}
+#navMenuContainer {
+  display: flex;
+  flex-wrap: wrap;
+  margin: 1rem 10%;
+  border: 1px solid;
+}
+.navMenu {
+  justify-content: center;
+  align-items: center;
+  flex: 1;
+  border: 1px solid;
+
+  font-size: 1.5rem;
+  display: flex;
+  padding: 1rem 1rem;
+  margin-bottom: 0;
+}
+
+.footer {
+  padding-bottom: 1rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+#footerElements {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+#bottomLinks {
+  font-size: 1rem;
+  gap: 0.5rem;
+}
+.bottomLink > i {
+  font-style: normal;
+}
+#footerElements > ul {
+  list-style: none;
+}
+#mainLogoBottom {
+  margin-top: 2rem;
+  height: 5rem;
+}
+
+.bottomLink:hover,
+.navMenu:hover,
+#bookRoomContainer:hover {
+  cursor: pointer;
+}
+.emojiImages {
+  width: 0.9rem;
+  margin-left: 0.2rem;
+  padding-top: 0.2rem;
+}
+
+.bottomTitle {
+  font-size: 1.1rem;
+  font-weight: bold;
+  font-style: normal;
+}
+
+#copyrightNotice {
+  text-align: center;
+}
 
 .hidden {
   display: none;
 }
-@media (min-width: 1921px) {
+
+/* Responsive design through media queries */
+
+@media (min-width: 1700px) {
   html {
-    font-size: calc(100vw / 120);
-    background-color: blue;
+    font-size: calc(100vw / 100);
+    padding-left: calc((100%-1280) / 20);
+    padding-right: calc((100%-1280) / 20);
   }
 }
-@media (orientation: portrait) or (max-width: 1024px) {
-  html {
-    font-size: max (calc(100vw / 45), 10px);
+@media (max-width: 1160px) {
+  #headerName {
+    font-size: 2rem;
   }
+
+  .header {
+    grid-template-columns: minmax(160px, 2fr) 6fr minmax(200px, 4fr);
+  }
+  .buttonSocial {
+    width: 2.5rem;
+    border-radius: 0.5rem;
+    padding: 0.2rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+  .divider {
+    height: 1.2rem;
+  }
+  .buttonLang {
+    width: 2.5rem;
+  }
+}
+@media (orientation: portrait) or (max-width: 700px) {
   .header {
     display: grid;
     grid-template-columns: minmax(110px, 1fr) 5fr;
     grid-template-rows: auto auto auto;
+    grid-row-gap: 0.5rem;
+    grid-column-gap: 0.5rem;
+    padding-bottom: 0.5rem;
+    padding-top: 0.5rem;
   }
   #mainLogo {
     grid-column: 1;
@@ -122,57 +232,34 @@ button:active,
   #headerName {
     grid-column: 1 / span 2;
     grid-row: 1;
+    text-align: center;
   }
   #socials_Lang {
     grid-area: 3 / 1 / 4 / 3;
     display: flex;
     flex-direction: row-reverse;
-    justify-content: space-between;
+    justify-content: center;
+    flex-wrap: wrap-reverse;
+    gap: 1rem;
+  }
+  #bookRoomContainer {
+    font-size: 1rem;
+    margin: 10px 10%;
+    justify-content: center;
+  }
+  .navMenu {
+    font-size: 1rem;
+    padding: 0.5rem 0.5rem;
+    margin-bottom: 0;
   }
 }
-#bookRoomContainer {
-  margin: 10px 25%;
-  padding: 10px;
-  border-radius: 20px;
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 1.5rem;
-}
-#navMenuContainer {
-  display: flex;
-  flex-wrap: wrap;
-  margin: 1rem 10%;
-  border-radius: 30%;
-}
-.navMenu {
-  justify-content: center;
-  align-items: center;
-  flex: 1;
-  font-weight: bold;
-  font-size: 1.5rem;
-  display: flex;
-  padding: 1rem 1rem;
-  margin-bottom: 0;
-}
-article {
-  margin: 0 10%;
-}
-h3 {
-  text-align: center;
-  font-size: 1.5rem;
-}
-p {
-  font-size: 1rem;
-}
 
-#advantages {
-  display: flex;
-  flex-wrap: wrap;
-  font-size: 1.2rem;
-  justify-content: space-evenly;
-}
-#advantages > li {
-  width: 300px;
-  list-style: none;
+@media (max-width: 800px) {
+  #headerName {
+    font-size: 1.8rem;
+    margin-bottom: 0;
+  }
+  #headerInfo {
+    font-size: 1rem;
+  }
 }
