--- a/main.css
+++ b/main.css
@@ -2,6 +2,7 @@ article {
   margin: 0 15%;
   display: flex;
   flex-direction: column;
+  gap: 1rem;
 }
 h3 {
   text-align: center;
@@ -9,24 +10,68 @@ h3 {
 }
 p {
   font-size: 1rem;
+  margin: 0;
+}
+.linkedP {
+  font-weight: bold;
+}
+.linkedP:hover {
+  cursor: pointer;
 }
 
-.articlePhoto {
-  align-self: center;
-  width: 60%;
-  border: 5px solid;
-}
 .articlePhoto picture {
   max-width: 100%;
   height: auto;
 }
+.imageContainer {
+  align-self: center;
+  width: 60%;
+  height: auto;
+  border: 5px solid;
+}
+.imageContainer img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
 #advantages {
   display: flex;
   flex-wrap: wrap;
-  font-size: 1.2rem;
+
   justify-content: space-evenly;
 }
 #advantages > li {
   width: 300px;
   list-style: none;
+  font-size: 1.2rem;
+  padding: 0.5rem;
+}
+
+@media (max-width: 1160px) {
+  .imageContainer {
+    width: 70%;
+    border: 5px solid;
+  }
+  article {
+    margin: 0 10%;
+  }
+}
+
+@media (orientation: portrait) or (max-width: 700px) {
+  .imageContainer {
+    width: 90%;
+    border: 3px solid;
+  }
+  article {
+    margin: 0 5%;
+  }
+}
+@media (max-width: 400px) {
+  .imageContainer {
+    width: 100%;
+    border: 2px solid;
+  }
+  article {
+    margin: 0 2.5%;
+  }
 }
