--- a/service.css
+++ b/service.css
@@ -1,33 +1,9 @@
-.roomPreview {
-  list-style: none;
-  display: flex;
-  flex-direction: column;
-  justify-content: start;
-  align-items: center;
-  font-size: 1.5rem;
-  margin: 0;
-  padding: 0;
-  width: 10rem;
-}
-.roomPreview > img {
-  width: 100%;
-  height: auto;
-}
-#roomsList {
-  display: flex;
-  justify-content: center;
-  flex-wrap: wrap;
-  gap: 10px;
-}
-.roomPhotos img {
-  display: block;
-  width: 100%;
-  height: 100%;
-  object-fit: cover;
-}
 mark {
   font-weight: bold;
   background-color: inherit;
+}
+.stars {
+  color: gold;
 }
 
 h3 {
@@ -45,7 +21,6 @@ h3 {
 .roomPhotos {
   flex-shrink: 0;
   width: 60%;
-  display: block;
 }
 .roomPhoto {
   width: 100%;
@@ -65,6 +40,16 @@ h3 {
   border-radius: 1rem;
   align-self: center;
   font-size: 1rem;
+}
+
+.imageGalleryPortrait {
+  margin: 0 10%;
+  display: flex;
+  flex-wrap: wrap;
+  gap: 0.5rem;
+}
+.galleryPhoto {
+  width: 200px;
 }
 
 @media (min-width: 1700px) {
