--- a/Styles.css
+++ b/Styles.css
@@ -19,7 +19,6 @@ body {
   align-items: center;
 }
 .header > * {
-  border: 1px solid blue;
   align-items: center;
   justify-content: center;
 }
@@ -41,6 +40,7 @@ body {
   grid-area: 2/2/3/3;
   display: flex;
   font-size: 1.2rem;
+  margin-bottom: 0.5rem;
 }
 span.avoidWrap {
   display: inline-block;
