--- a/main.css
+++ b/main.css
@@ -1,5 +1,9 @@
-article {
+main {
   margin: 0 15%;
+
+  gap: 1rem;
+}
+article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
@@ -10,7 +14,7 @@ h3 {
 }
 p {
   font-size: 1rem;
-  margin: 0;
+  margin: 0 5%;
 }
 .linkedP {
   font-weight: bold;
@@ -25,6 +29,7 @@ p {
 }
 .imageContainer {
   align-self: center;
+  justify-self: center;
   width: 60%;
   height: auto;
   border: 5px solid;
@@ -53,7 +58,7 @@ p {
     width: 70%;
     border: 5px solid;
   }
-  article {
+  main {
     margin: 0 10%;
   }
 }
@@ -63,7 +68,7 @@ p {
     width: 90%;
     border: 3px solid;
   }
-  article {
+  main {
     margin: 0 5%;
   }
 }
@@ -72,7 +77,7 @@ p {
     width: 100%;
     border: 2px solid;
   }
-  article {
+  main {
     margin: 0 2.5%;
   }
 }
