--- a/Styles.css
+++ b/Styles.css
@@ -9,6 +9,8 @@ body {
   background-color: --primary;
   color: --secondary;
   padding: 0 3%;
+  padding-top: 0.5rem;
+
   margin: 0;
 
   display: grid;
@@ -73,6 +75,10 @@ a {
   justify-content: center;
   align-items: center;
 }
+.buttonLang img,
+#themeSwitcher img {
+  border-radius: 5px;
+}
 #language {
   display: flex;
   justify-content: center;
@@ -126,6 +132,7 @@ button:active,
   border: 1px solid;
 
   font-size: 1.5rem;
+  font-weight: bold;
   display: flex;
   padding: 1rem 1rem;
   margin-bottom: 0;
