--- a/rooms.css
+++ b/rooms.css
@@ -1,3 +1,7 @@
+html {
+  --photo: 40rem;
+  --photoH: 27rem;
+}
 .roomPreview {
   list-style: none;
   display: flex;
@@ -55,8 +59,8 @@ article {
 }
 
 .roomPhotos {
-  width: 40rem;
-  height: auto;
+  width: var(--photo);
+  height: var(--photoH);
 
   display: block;
   flex-shrink: 0;
@@ -65,8 +69,8 @@ article {
 }
 
 .roomPhotos img {
-  width: 40rem;
-  height: auto;
+  width: var(--photo);
+  height: var(--photoH);
   display: block;
 }
 .roomDescription {
@@ -93,8 +97,17 @@ article {
     border: 0.3rem solid;
   }
 }
-
+@media (max-width: 1260px) {
+  html {
+    --photo: 36rem;
+    --photoH: 24rem;
+  }
+}
 @media (max-width: 1160px) {
+  html {
+    --photo: 35rem;
+    --photoH: 23.625rem;
+  }
   main {
     margin: 0 5%;
   }
@@ -103,7 +116,7 @@ article {
   }
 }
 
-@media (orientation: portrait) or (max-width: 900px) {
+@media (orientation: portrait) or (max-width: 980px) {
   main {
     margin: 0 5%;
   }
@@ -113,16 +126,23 @@ article {
     align-items: center;
     margin: 1.5rem 0;
   }
+  html {
+    --photo: 35rem;
+    --photoH: 22.75rem;
+  }
   .roomPhotos {
-    width: 80%;
     border: 4px solid;
   }
   .roomDescription {
-    width: 70%;
+    width: 80%;
   }
 }
 
 @media (max-width: 650px) {
+  html {
+    --photo: 30rem;
+    --photoH: 19.5rem;
+  }
   main {
     margin: 0 5%;
   }
@@ -130,15 +150,29 @@ article {
     margin: 2rem 0;
   }
   .roomPhotos {
-    width: 90%;
     border: 3px solid;
   }
   .roomDescription {
     width: 90%;
   }
 }
-
+@media (max-width: 560px) {
+  html {
+    --photo: 25rem;
+    --photoH: 16.25rem;
+  }
+}
+@media (max-width: 460px) {
+  html {
+    --photo: 20rem;
+    --photoH: 13rem;
+  }
+}
 @media (max-width: 400px) {
+  html {
+    --photo: 18rem;
+    --photoH: 11.7rem;
+  }
   main {
     margin: 0 5%;
   }
@@ -146,12 +180,16 @@ article {
     margin: 1rem 0;
   }
   .roomPhotos {
-    width: 96%;
-
     border: 2px solid;
   }
   .roomDescription {
     width: 90%;
+  }
+}
+@media (max-width: 340px) {
+  html {
+    --photo: 16rem;
+    --photoH: 10.4rem;
   }
 }
 
@@ -171,7 +209,7 @@ article {
 /*css for manual navigation*/
 .sliderManual {
   position: absolute;
-  margin-top: 23rem;
+  margin-top: calc(var(--photoH) * 0.85);
   width: 100%;
   display: flex;
   justify-content: center;
@@ -202,19 +240,19 @@ article {
   background: var(--highlight);
 }
 #Lux2:checked ~ .mainPhoto {
-  margin-left: -40rem;
+  margin-left: calc((var(--photo) * -1));
 }
 
 #Lux3:checked ~ .mainPhoto {
-  margin-left: -80rem;
+  margin-left: calc((var(--photo) * -2));
 }
 
 #Lux4:checked ~ .mainPhoto {
-  margin-left: -120rem;
+  margin-left: calc((var(--photo) * -3));
 }
 
 #Lux5:checked ~ .mainPhoto {
-  margin-right: -160rem;
+  margin-right: calc((var(--photo) * -4));
 }
 
 .leftScroll,
@@ -224,7 +262,7 @@ article {
   padding: 0;
   top: 35%;
   width: 15%;
-  height: 30%;
+  height: 25%;
   background-color: black;
   cursor: pointer;
   display: flex;
@@ -233,12 +271,12 @@ article {
 }
 
 .leftScroll {
-  left: -1rem;
+  left: 0;
   border-radius: 0 10% 10% 0;
 }
 
 .rightScroll {
-  right: -1rem;
+  right: 0;
   border-radius: 10% 0 0 10%;
 }
 
