--- a/colorThemes.css
+++ b/colorThemes.css
@@ -8,7 +8,7 @@
   --h3: #170714;
   --article: white;
   --highlight: #ffd700;
-  --text: black;
+  --border: #600202;
 }
 .darkTheme {
   --primary: #2a019c;
@@ -21,7 +21,7 @@
   --text: #ffffff;
   --article: #01003f;
   --highlight: #65f7ff;
-  --text: #ecedf6;
+  --border: #1d0365;
 }
 body {
   background-color: var(--secondary);
@@ -92,7 +92,7 @@ mark {
   border-color: var(--highlight);
 }
 .roomPhotos {
-  border-color: var(--highlight);
+  border-color: var(--border);
 }
 
 .bookRoomMini {
