--- a/Styles.css
+++ b/Styles.css
@@ -25,7 +25,6 @@ body {
   justify-content: center;
 }
 #mainLogo {
-  background-color: white;
   grid-area: 1/1/3/2;
 }
 #headerName {
@@ -109,8 +108,8 @@ button:active,
   filter: grayscale(0%);
 }
 #bookRoomContainer {
-  margin: 10px 25%;
-  padding: 10px;
+  margin: 1rem 25%;
+  padding: 1rem;
   border-radius: 20px;
   display: flex;
   justify-content: center;
@@ -290,4 +289,61 @@ button:active,
 
 .compass {
   font-style: normal;
+}
+.keyEmoji {
+  color: transparent;
+  text-shadow: 0 0 0 var(--highlight);
+}
+
+/*booking ROOM ANIMATION*/
+#bookRoomContainer i {
+  position: relative;
+}
+#bookRoomContainer i::before {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.1rem;
+  bottom: -0.2rem; /* Adjust the position as needed */
+  left: 0;
+  background-color: var(--highlight);
+  transform-origin: left;
+  transform: scaleX(0);
+  transition: transform 1s ease;
+}
+#bookRoomContainer i::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 0.1rem;
+  top: -0.1rem; /* Adjust the position as needed */
+  right: 0;
+  background-color: var(--highlight);
+  transform-origin: right;
+  transform: scaleX(0);
+  transition: transform 1s ease;
+}
+
+#bookRoomContainer:hover i::before,
+#bookRoomContainer:hover i::after {
+  transform: scaleX(1);
+  background-color: var(--button);
+  transition: 1s;
+}
+#bookRoomContainer:hover {
+  cursor: pointer;
+  background-color: var(--highlight);
+  color: var(--button);
+  border-color: var(--button);
+  transition: 1s;
+}
+#bookRoomContainer:hover .keyEmoji {
+  text-shadow: 0 0 0 var(--button);
+  transition: 1s;
+}
+
+.navMenu:hover {
+  color: var(--button);
+  background-color: var(--highlight);
+  transition: 0.5s;
 }
