--- a/main.css
+++ b/main.css
@@ -7,6 +7,8 @@ article {
   display: flex;
   flex-direction: column;
   gap: 1rem;
+  margin-bottom: 1rem;
+  padding-bottom: 1rem;
 }
 h3 {
   text-align: center;
