--- a/bookingRoom.css
+++ b/bookingRoom.css
@@ -35,9 +35,13 @@ input[name="roomType"] {
   flex-wrap: wrap;
   gap: 1rem;
 }
+main {
+  margin: 0 5%;
+}
 
 h3 {
   text-align: center;
+  font-size: 1.5rem;
 }
 #stayTimeContainer {
   margin-top: 1rem;
@@ -70,12 +74,26 @@ p {
   font-weight: bold;
   text-align: center;
   margin: 0 1-px;
-  color: var(--border);
+  color: orange;
   opacity: 0;
   height: 0;
 }
-input.invalid + .warningDiv p {
+input.invalid + .warningDiv p,
+div.invalid + .warningDiv p {
   opacity: 1;
   height: auto;
   margin-bottom: 10px;
+}
+#sendForm {
+  align-self: center;
+  width: 250px;
+  border: 4px solid var(--border);
+  padding: 1rem;
+  border-radius: 1rem;
+  color: var(--highlight);
+  font-size: 1rem;
+}
+
+#sendForm:hover {
+  cursor: pointer;
 }
