--- a/bookingRoom.css
+++ b/bookingRoom.css
@@ -69,7 +69,7 @@ input.valid {
 input.invalid {
   border-color: orange;
 }
-p {
+.warningDiv p {
   font-size: 1rem;
   font-weight: bold;
   text-align: center;
